2010-01-19
- SRC and SRC_OVER operators were optimized in pure C backend.

2010-01-18
- Added operator characteristics, will be used later by raster paint engine.
- Refactorized and rewritten Fog::ByteUtil.
- Rasterizer, Scanline, DitherMatrix classes are not exported from now.
- Added _p suffix to header files that won't be installed (and can't be used by apps).
- Added 32-bit C code for image compositing (Now Fog library can be
  used by any 32/64-bit architecture).
- Added OPERATOR_MULTIPLY
- Rewritten paths and path storage. Path is now stored as array of commands
  and array of vertices, this allows to simplify path transformation methods,
  rasterizer, and it's also better for memory usage (because command is now 
  only uint8_t).
- Path::add... methods now supports direction argument that can be used to
  set the direction of object being added.

2010-01-14
- Improved performance of blitImage() when using affine transformations and subpixel
  placement (see new code ImageAffineBound).
- Added operator characteristics that can be used by raster paint engine.
- Renamed COMPOSITE_... enum to OPERATOR_... enum.
- Fixed OPERATOR_CLEAR SSE2 code.

2010-01-09
- Added Path::addPath(const Path& path, const PointD& pt).
- Improved SSE2 vertex transform code.
- Added LINE_CAP_TRIANGLE, LINE_CAP_ROUND_REVERT, LINE_CAP_TRIANGLE_REVERT caps.
- Added startCap and endCap support in path stroking (stroker and painter related).
- Renamed missing methods from drawImage() to blitImage().
- Added SPREAD_NONE, will be used later (not complete task).

2010-01-06
- Fixed wrong assertion in RasterPaintEngine.

2010-01-05
- Renamed PainterUtil to PaintUtil.
- Fixed matrix.scale() in PainterEngine, Pattern and Matrix (this
  function now accepts the order parameter).
- Added small scanline generator optimization.

2010-01-04
- Renamed PainterEngine to PaintEngine.
- Fixed RasterPaintEngine clipping again.

2010-01-03
- Added image transform to Painter.